--- a/.github/workflows/aspnetcore.yml
+++ b/.github/workflows/aspnetcore.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           dotnet-version: 3.0.100
       - name: Install dotnet-script
-        run: dotnet tool install -g dotnet-script --tool-path /usr/bin
+        run: dotnet tool install dotnet-script --tool-path /usr/bin
 
       - name: Build
         run: /usr/bin/dotnet-script build/build.csx
