--- a/.github/workflows/aspnetcore.yml
+++ b/.github/workflows/aspnetcore.yml
@@ -16,4 +16,4 @@ jobs:
         run: dotnet tool install -g dotnet-script
 
       - name: Build
-        run: ${env:HOME}/.dotnet/tools/dotnet-script build/build.csx
+        run: ~/.dotnet/tools/dotnet-script build/build.csx
