--- a/.github/workflows/aspnetcore.yml
+++ b/.github/workflows/aspnetcore.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           dotnet-version: 3.0.100
       - name: Install dotnet-script
-        run: dotnet tool install -g dotnet-script
+        run: dotnet tool install dotnet-script --tool-path dotnet-script-tool
 
       - name: Build
-        run: ~/.dotnet/tools/dotnet-script build/build.csx
+        run: dotnet-script-tool/dotnet-script build/build.csx
