--- a/.github/workflows/aspnetcore.yml
+++ b/.github/workflows/aspnetcore.yml
@@ -13,7 +13,9 @@ jobs:
         with:
           dotnet-version: 3.0.100
       - name: Install dotnet-script
-        run: dotnet tool install dotnet-script --tool-path dotnet-script-tool
+        run: dotnet tool install -g dotnet-script
+      - name: Install ReportGenerator
+        run: dotnet tool install -g dotnet-reportgenerator-globaltool
 
       - name: Build
         run: dotnet-script-tool/dotnet-script build/build.csx
