--- a/.github/workflows/aspnetcore.yml
+++ b/.github/workflows/aspnetcore.yml
@@ -9,11 +9,11 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - name: Setup .NET Core
-        uses: actions/setup-dotnet@master
+        uses: rojepp/setup-dotnet@fix_dotnet_root
         with:
           dotnet-version: 3.0.100
       - name: Install dotnet-script
-        run: dotnet tool install -g dotnet-script
+        run: dotnet tool install dotnet-script --tool-path dotnet-script-tool
 
       - name: Build
-        run: dotnet-script build/build.csx
+        run: dotnet-script-tool/dotnet-script build/build.csx
