--- a/.github/workflows/aspnetcore.yml
+++ b/.github/workflows/aspnetcore.yml
@@ -12,6 +12,10 @@ jobs:
         uses: rojepp/setup-dotnet@fix_dotnet_root
         with:
           dotnet-version: 3.0.100
+        env: # Or as an environment variable
+          GITHUB_REPO_TOKEN: ${{ secrets.GITHUB_REPO_TOKEN }}
+          IS_SECURE_BUILDENVIRONMENT: ${{ secrets.IS_SECURE_BUILDENVIRONMENT }}
+          NUGET_APIKEY: ${{ secrets.NUGET_APIKEY }}
       - name: Install dotnet-script
         run: dotnet tool install dotnet-script --tool-path dotnet-script-tool
 
