--- a/.github/workflows/aspnetcore.yml
+++ b/.github/workflows/aspnetcore.yml
@@ -18,6 +18,6 @@ jobs:
       - name: Build
         run: dotnet-script-tool/dotnet-script build/build.csx
         env: # Or as an environment variable
-          GITHUB_REPO_TOKEN: ${{ secrets.GITHUB_REPO_TOKEN }}
+          GITHUB_REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           IS_SECURE_BUILDENVIRONMENT: ${{ secrets.IS_SECURE_BUILDENVIRONMENT }}
           NUGET_APIKEY: ${{ secrets.NUGET_APIKEY }}
