--- a/.github/workflows/aspnetcore.yml
+++ b/.github/workflows/aspnetcore.yml
@@ -1,4 +1,4 @@
-name: ASP.NET Core CI
+name: CI
 
 on: [push, pull_request]
 
@@ -8,14 +8,14 @@ jobs:
 
     steps:
       - uses: actions/checkout@v1
-      - name: Setup .NET Core
+      - name: Install .Net Core 3.0
         uses: rojepp/setup-dotnet@fix_dotnet_root
         with:
           dotnet-version: 3.0.100
       - name: Install dotnet-script
         run: dotnet tool install dotnet-script --tool-path dotnet-script-tool
 
-      - name: Build
+      - name: Run build script
         run: dotnet-script-tool/dotnet-script build/build.csx
         env: # Or as an environment variable
           GITHUB_REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
