--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ BenchmarkDotNet.Artifacts
 CoverageResult
 *.exe
 .DS_Store
+dotnet-script-tool/
 
 # External tool builders
 .externalToolBuilders/
