--- a/src/LightInject.Microsoft.Hosting.Tests/LightInject.Microsoft.Hosting.Tests.csproj
+++ b/src/LightInject.Microsoft.Hosting.Tests/LightInject.Microsoft.Hosting.Tests.csproj
@@ -1,11 +1,9 @@
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-
     <IsPackable>false</IsPackable>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
@@ -17,13 +15,9 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="3.1.1" />
-
-
+    <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="3.1.2" />
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\LightInject.Microsoft.Hosting\LightInject.Microsoft.Hosting.csproj" />
   </ItemGroup>
-
 </Project>
