--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,10 +8,14 @@ jobs:
 
     steps:
       - uses: actions/checkout@v1
-      - name: Install .Net Core 3.0
+      - name: Install Net5.0
         uses: actions/setup-dotnet@v1.4.0
         with:
-          dotnet-version: 3.1.101
+          dotnet-version: 5.0.400
+      - name: Install Net6.0 preview
+        uses: actions/setup-dotnet@v1.4.0
+        with:
+          dotnet-version: 6.0.100-preview.7
       - name: Install dotnet-script
         run: dotnet tool install dotnet-script --tool-path dotnet-script-tool
 
