--- a/src/LightInject.Microsoft.Hosting/LightInject.Microsoft.Hosting.csproj
+++ b/src/LightInject.Microsoft.Hosting/LightInject.Microsoft.Hosting.csproj
@@ -20,8 +20,8 @@
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="LightInject.Microsoft.DependencyInjection" Version="3.4.0-preview1" />
-    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="6.0.0-preview.7.21377.19" />
+    <PackageReference Include="LightInject.Microsoft.DependencyInjection" Version="3.4.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="6.0.0" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.354">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
