--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,14 +8,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v1
-      - name: Install Net5.0
-        uses: actions/setup-dotnet@v1.8.1
+      - name: Install .Net Core
+        uses: actions/setup-dotnet@v2.0.0
         with:
-          dotnet-version: 5.0.400
-      - name: Install Net6.0 preview
-        uses: actions/setup-dotnet@v1.8.1
-        with:
-          dotnet-version: 6.0.100-preview.7.21379.14
+          dotnet-version: 6.0.300
       - name: Install dotnet-script
         run: dotnet tool install dotnet-script --tool-path dotnet-script-tool
 
