--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -48,7 +48,7 @@
             ],
             "type": "shell",
             "options": {
-                "cwd": "src"
+                "cwd": "${workspaceFolder}"
             },
             "group": "build",
             "presentation": {
