--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Install .Net Core
         uses: actions/setup-dotnet@v2.0.0
         with:
-          dotnet-version: 7.0.100
+          dotnet-version: 8.0.x
       - name: Install dotnet-script
         run: dotnet tool install dotnet-script --tool-path dotnet-script-tool
 
